# pchat

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile.am  README.md  autogen.sh  common.mk  config.h.cmake  configure.ac
cmake/: BundleDependencies.cmake.in  installer.nsi.in
data/: CMakeLists.txt  pchat.gresource.xml
data/icons/: CMakeLists.txt  Makefile.am
data/man/: CMakeLists.txt  Makefile.am  pchat.1
data/misc/: CMakeLists.txt  Makefile.am  pchat.appdata.xml.in  pchat.desktop
data/pkgconfig/: CMakeLists.txt  Makefile.am  pchat-plugin.pc.in
osx/: Info.plist.in  create-bundle.sh  create-dmg.sh  launcher.sh  makebundle.sh  pchat.bundle  pchat.icns
plugins/: CMakeLists.txt  Makefile.am  plugin-conf.in
plugins/audioplayer/: CMakeLists.txt  Makefile.am  audioplayer.c  audioplayer.h  gui.c  gui.h  playlist_parser.c  playlist_parser.h  plugin.c
plugins/checksum/: CMakeLists.txt  checksum.c
plugins/exec/: CMakeLists.txt  exec.c
plugins/fishlim/: CMakeLists.txt  dh1080.c  fish.c  keystore.c  plugin_pchat.c  plugin_pchat.h  utils.h
plugins/lua/: CMakeLists.txt  lua.c
plugins/perl/: CMakeLists.txt  Makefile.am  generate_header  perl.c  perl.def
plugins/perl/lib/: PChat.pm  XChat.pm  Xchat.pm
plugins/perl/lib/PChat/: Embed.pm
plugins/perl/lib/PChat/List/: Network.pm
plugins/perl/lib/PChat/List/Network/: AutoJoin.pm  Entry.pm
plugins/perl/lib/XChat/: Embed.pm
plugins/perl/lib/XChat/List/: Network.pm
plugins/perl/lib/XChat/List/Network/: AutoJoin.pm  Entry.pm
plugins/python/: CMakeLists.txt  Makefile.am  _pchat.py  generate_plugin.py  python.c  python.def  python.py  xchat.py
plugins/sysinfo/: CMakeLists.txt  sysinfo.c  sysinfo.def
plugins/sysinfo/unix/: pci.c
plugins/upd/: CMakeLists.txt  upd.c
plugins/winamp/: CMakeLists.txt  winamp.c
po/: CMakeLists.txt  Makevars  am.po  az.po  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  et.po  fi.po  fr.po  gl.po  hi.po  hu.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  (+5 more)
src/: CMakeLists.txt  Makefile.am  version-script
src/common/: CMakeLists.txt  Makefile.am  cfgfiles.c  cfgfiles.h  chanopt.c  chanopt.h  ctcp.c  ctcp.h  dcc.c  dcc.h  debug-log.c  debug-log.h  fe.h  history.c  history.h  identd.c  identd.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  make-te.c  meson.build  modes.c  modes.h  msproxy.c  msproxy.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  pchat-platform-support-win32.c  pchat-platform-support.c  pchat-platform-support.h  pchat-plugin.h  pchat.c  pchat.h  (+35 more)
src/common/dbus/: CMakeLists.txt  Makefile.am  dbus-client.c  dbus-client.h  dbus-plugin.c  dbus-plugin.h  example-gdbus.py  example.c  example.py  meson.build  org.pchat.service.service.in  remote-object.xml
src/common/sysinfo/: sysinfo.h
src/fe-gtk/: Makefile.am  ascii.c  banlist.c  chanview-tree.c  chanview.c  gtkcompat.h  menu.c  pchat.exe.manifest  pchat.rc.in  pixmaps.h  setup.c  sexy-spell-entry.c  xtext.h
src/fe-gtk3/: CMakeLists.txt  Makefile.am  ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  chanlist.h  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  css-helpers.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  editlist.h  fe-gtk.c  fe-gtk.h  fkeys.c  fkeys.h  gtkcompat.h  gtkutil.c  gtkutil.h  ignoregui.c  joind.c  joind.h  maingui.c  maingui.h  menu.c  menu.h  notifygui.c  notifygui.h  palette.c  palette.h  pchat.rc.in  pixmaps.c  pixmaps.h  plugin-notification.c  (+23 more)
src/fe-gtk3/notifications/: CMakeLists.txt  notification-backend.h  notification-dummy.c  notification-freedesktop.c  notification-windows-simple.c  notification-windows.c  notification-winrt-mingw.cpp  notification-winrt.cpp
src/fe-text/: Makefile.am  fe-text.c  fe-text.h
